manifests/system/authentik/overlays/home/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "authentik.ucdialplans.com"
  rules:
  - backendRefs:
    - name: authentik-server
      namespace: authentik
      kind: Service
      port: 9000
